# waylandar

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.md  flake.nix  result  theme_template.qml
.github/workflows/: ci.yml
backend/: fetch_calendar.py  pyproject.toml  sync.py
backend/core/: cli.py  config.py  daemon.py  errors.py
backend/providers/: caldav.py  google.py  ics.py  vdirsyncer.py
contrib/nixpkgs/: package.nix
dev/nextcloud-test/: .env.example  docker-compose.yaml
frontend/: Theme.qml  dashboard.qml  shell.qml  widget.qml
frontend/components/: AgendaListPane.qml  CalendarCard.qml  CalendarGridPane.qml  CalendarList.qml  CalendarSidebar.qml  LoadingSpinner.qml  WidgetHeader.qml
