[project]
name = "waylandar-backend"
version = "0.1.0"
description = "Python backend to securely fetch Google Calendar events for Waylandar"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.133.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[tool.uv]
package = false
